--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ form {
 /*Background Styling*/
 .bkg-st {
     display: block;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -10;
@@ -446,7 +446,6 @@ form {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
 }
