--- a/style.css
+++ b/style.css
@@ -440,8 +440,8 @@ form {
     top: 0;
     left: 0;
     z-index: -10;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
