--- a/style.css
+++ b/style.css
@@ -398,8 +398,7 @@ h4 {
     height: auto;
 }
 .logo-3 {
-    margin-right: 20px;
-    width: 40px;
+    width: 65px;
     height: auto;
 }
 
@@ -550,5 +549,8 @@ h4 {
 
     .logo-2 {
         width: 12vw;
+    }
+    .logo-3 {
+        width: 100px;
     }
 }
